--- a/Amh.MVVM.Utility/Amh.MVVM.Utility.csproj
+++ b/Amh.MVVM.Utility/Amh.MVVM.Utility.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmhListExtension.cs" />
+    <Compile Include="MessagingService.cs" />
     <Compile Include="MyViewLocatorUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowService.cs" />
