--- a/Amh.MVVM.Base/Amh.MVVM.Base.csproj
+++ b/Amh.MVVM.Base/Amh.MVVM.Base.csproj
@@ -48,6 +48,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BindableBase.cs" />
     <Compile Include="Command\RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\MainViewModelBase.cs" />
