--- a/Amh.MVVM.Utility/Amh.MVVM.Utility.csproj
+++ b/Amh.MVVM.Utility/Amh.MVVM.Utility.csproj
@@ -44,12 +44,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AmhListExtension.cs" />
+    <Compile Include="Extension\AmhListExtension.cs" />
     <Compile Include="Creator\MyCreator.cs" />
     <Compile Include="IWindowDialogService.cs" />
     <Compile Include="IWindowService.cs" />
     <Compile Include="MessagingService.cs" />
-    <Compile Include="MyViewLocatorUtility.cs" />
+    <Compile Include="Extension\MyViewLocatorUtility.cs" />
     <Compile Include="MyWindowTabService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowDialogService.cs" />
